--- a/app_front/src/component/Homme.css
+++ b/app_front/src/component/Homme.css
@@ -15,6 +15,11 @@
     font-size: 50px;
 }
 
+.URYOUTUBRhomme {
+    width: 470px !important;
+    margin-right: 20px;
+}
+
 @media only screen and (max-width: 600px) and (min-width: 400px) {
     .bodyicons {
         margin-left: 100px!important;
